2009-01-07  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: libcanberra and gstreamer
	dependencies were removed from gnome-control-center (and esound too,
	six months ago).

2009-01-07  Gabor Kelemen  <kelemeng@gnome.hu>

	* modulesets/gnome-suites-2.26.modules: gtk-sharp's bootstrap-2.12
	renamed to bootstrap-2.14

2009-01-07  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-external-deps-2.26.modules: Update poppler
	version to 0.10.2

2009-01-07  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-external-deps-2.26.modules: Update pixman
	version to 0.13.2

2009-01-07  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-external-deps-2.26.modules: Update iso-codes
	version to 3.5.1

2009-01-06  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: clutter is now an hard
	dependency of gnome-games.

2009-01-06  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules: nautilus-sendto got optional empathy
	support.

2009-01-06  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: empathy now depends on
	libcanberra.

2009-01-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* modulesets/gnome-2.26.modules: GUPnP moved to git.

2009-01-06  Sebastian Pölsterl  <sebp@svn.gnome.org>

	* modulesets/gnome-2.26.modules: dvb-daemon depends on
	gst-plugins-good, too	
	
2009-01-06  Sebastian Pölsterl  <sebp@svn.gnome.org>

	* modulesets/gnome-2.26.modules: gst-rtsp-server depends on
	gst-plugins-base not gst-plugins-bad
	
2009-01-06  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: updated ptlib and opal
	to their newest versions, required by ekiga.

2009-01-05  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules:
	* modulesets/gnome-suites-2.26.modules: added pulseaudio and
	requirements as external dependencies, and marked gnome-media as
	depending on pulseaudio.
