@@ -33,7 +33,7 @@ except ImportError:
 
 import git
 
-from jhbuild.errors import BuildStateError
+from jhbuild.errors import BuildStateError, CommandError
 from jhbuild.versioncontrol import Repository, Branch, register_repo_type
 from jhbuild.commands.sanitycheck import inpath
 from jhbuild.utils.sxml import sxml
