@@ -1,3 +1,9 @@
+2009-01-09  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/versioncontrol/arch.py, jhbuild/versioncontrol/bzr.py,
+	jhbuild/versioncontrol/cvs.py: properly import CommandError exception
+	in arch, bzr and cvs modules.  (closes: #567107)
+
 2009-01-07  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-suites-2.26.modules: libcanberra and gstreamer
